Changes in paths

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
     <img src="./images/bg-triangle.svg" alt="triangule">
     <div id="paper" class="pad pad_blue main_blue">
       <div class="pad-intern">
-        <img src="/images/icon-paper.svg" alt="">
+        <img src="./images/icon-paper.svg" alt="">
       </div>
     </div>
     <div id="scissors" class="pad pad_yellow main_yellow">
       <div class="pad-intern">
-        <img src="/images/icon-scissors.svg" alt="">
+        <img src="./images/icon-scissors.svg" alt="">
       </div>
     </div>
     <div id="rock" class="pad pad_red main_red">
       <div class="pad-intern">
-        <img src="/images/icon-rock.svg" alt="">
+        <img src="./images/icon-rock.svg" alt="">
       </div>
     </div>
   </section>
@@ -43,27 +43,27 @@
     <img class="pentagono" src="./images/bg-pentagon.svg" alt="">
     <div id="paper_bonus" class="pad_bonus pad_blue bonus_blue">
       <div class="bonus-intern">
-        <img src="/images/icon-paper.svg" alt="">
+        <img src="./images/icon-paper.svg" alt="">
       </div>
     </div>
     <div id="scissors_bonus" class="pad_bonus pad_yellow bonus_yellow">
       <div class="bonus-intern">
-        <img src="/images/icon-scissors.svg" alt="">
+        <img src="./images/icon-scissors.svg" alt="">
       </div>
     </div>
     <div id="rock_bonus" class="pad_bonus pad_red bonus_red">
       <div class="bonus-intern">
-        <img src="/images/icon-rock.svg" alt="">
+        <img src="./images/icon-rock.svg" alt="">
       </div>
     </div>
     <div id="spock" class="pad_bonus pad_green bonus_green">
       <div class="bonus-intern">
-        <img src="/images/icon-spock.svg" alt="">
+        <img src="./images/icon-spock.svg" alt="">
       </div>
     </div>
     <div id="lizard" class="pad_bonus pad_purple bonus_purple">
       <div class="bonus-intern">
-        <img src="/images/icon-lizard.svg" alt="">
+        <img src="./images/icon-lizard.svg" alt="">
       </div>
     </div>
   </section>
@@ -74,27 +74,27 @@
         <div class="combat_box-pad">
           <div id="pick_blue" class="pad pad_blue combat_blue display__none">
             <div class="pad-intern">
-              <img src="/images/icon-paper.svg" alt="">
+              <img src="./images/icon-paper.svg" alt="">
             </div>
           </div>
           <div id="pick_yellow" class="pad pad_yellow combat_yellow display__none">
             <div class="pad-intern">
-              <img src="/images/icon-scissors.svg" alt="">
+              <img src="./images/icon-scissors.svg" alt="">
             </div>
           </div>
           <div id="pick_red" class="pad pad_red combat_red display__none">
             <div class="pad-intern">
-              <img src="/images/icon-rock.svg" alt="">
+              <img src="./images/icon-rock.svg" alt="">
             </div>
           </div>
           <div id="pick_green" class="pad pad_green combat_green display__none">
             <div class="pad-intern">
-              <img src="/images/icon-spock.svg" alt="">
+              <img src="./images/icon-spock.svg" alt="">
             </div>
           </div>
           <div id="pick_purple" class="pad pad_purple combat_purple display__none">
             <div class="pad-intern">
-              <img src="/images/icon-lizard.svg" alt="">
+              <img src="./images/icon-lizard.svg" alt="">
             </div>
           </div>
         </div>
@@ -104,27 +104,27 @@
         <div class="combat_box-pad">
           <div id="right_blue" class="pad pad_blue right_blue display__none">
             <div class="pad-intern">
-              <img src="/images/icon-paper.svg" alt="">
+              <img src="./images/icon-paper.svg" alt="">
             </div>
           </div>
           <div id="right_yellow" class="pad pad_yellow right_yellow display__none">
             <div class="pad-intern">
-              <img src="/images/icon-scissors.svg" alt="">
+              <img src="./images/icon-scissors.svg" alt="">
             </div>
           </div>
           <div id="right_red" class="pad pad_red right_red display__none">
             <div class="pad-intern">
-              <img src="/images/icon-rock.svg" alt="">
+              <img src="./images/icon-rock.svg" alt="">
             </div>
           </div>
           <div id="right_green" class="pad pad_green right_green display__none">
             <div class="pad-intern">
-              <img src="/images/icon-spock.svg" alt="">
+              <img src="./images/icon-spock.svg" alt="">
             </div>
           </div>
           <div id="right_purple" class="pad pad_purple right_purple display__none">
             <div class="pad-intern">
-              <img src="/images/icon-lizard.svg" alt="">
+              <img src="./images/icon-lizard.svg" alt="">
             </div>
           </div>
         </div>
